--- a/data/flex/indexes/accounts.yaml
+++ b/data/flex/indexes/accounts.yaml
@@ -1,6 +1,6 @@
 version: '1.2'
-timestamp: 1721548699
-count: 2
+timestamp: 1722488658
+count: 3
 index:
   bastianhaaf:
     storage_key: bastianhaaf
@@ -12,3 +12,8 @@ index:
     storage_timestamp: 1721488394
     key: jan
     email: jan.n.martens@web.de
+  test:
+    storage_key: test
+    storage_timestamp: 1722488658
+    key: test
+    email: test@haaf.ch
