--- a/plugins/flex-objects/blueprints/flex-objects/technic.yaml
+++ b/plugins/flex-objects/blueprints/flex-objects/technic.yaml
@@ -15,7 +15,7 @@ config:
       list:
         route: '/technik'
         title: Technik
-        icon: fa-user
+        icon: fa-car
         # Authorization to collection admin
         authorize: ['admin.einsaetze.list', 'admin.super']
         # Priority -10 .. 10 (highest goes up)
