Add option for different profile ordering for mobile

--- a/themes/feuerwehr-hungen/blueprints/modular/profiles.yaml
+++ b/themes/feuerwehr-hungen/blueprints/modular/profiles.yaml
@@ -26,6 +26,14 @@ form:
               options:
                 'left': 'Links'
                 'right': 'Rechts'
+            header.order_mobile:
+              type: select
+              label: Reihenfolge (Mobil)
+              classes: fancy
+              default: text-first
+              options:
+                'text-first': 'Text zuerst'
+                'card-first': 'Profile zuerst'
 
             header.profiles:
               name: profiles
