Update modal animation Adjust profile text positioning Add icon for youth texts

--- a/config/site.yaml
+++ b/config/site.yaml
@@ -8,7 +8,7 @@ taxonomies:
   - tag
   - month
 metadata:
-  description: 'Grav is an easy to use, yet powerful, open source flat-file CMS'
+  description: 'Feuerwehr Hungen Inheiden, wir sind die örtliche Freiwillige Feuerwehr und zeigen euch gerne was bei uns passiert'
 summary:
   enabled: true
   format: short
