--- a/config/system.yaml
+++ b/config/system.yaml
@@ -162,7 +162,7 @@ log:
     facility: local6
     tag: grav
 debugger:
-  enabled: true
+  enabled: false
   provider: clockwork
   censored: false
   shutdown:
