--- a/data/flex-objects/vorstellung.yaml
+++ b/data/flex-objects/vorstellung.yaml
@@ -26,6 +26,7 @@ b83d23d6622ee8465bbfc2e7e03640ef:
       size: 366893
       path: 'image://vorstellung-images/DSC01893.jpg'
   funktion: Jugendgruppenleiterin
+  beschreibung: 'Ich bin Jugendgruppenleiterin der Jugendfeuerwehr und habe große Freude an der Arbeit mit den Kindern und Jugendlichen. Besonders schätze ich den Zusammenhalt und die gegenseitige Unterstützung in unserer Gruppe. Ein Highlight für mich ist immer das Zeltlager, das eine großartige Gelegenheit bietet, Teamgeist und Freundschaften zu stärken.'
 d55e5161aa7b0d8c3bb3677028d2ecab:
   published: true
   picked_image: DSC01979.jpg
