--- a/plugins/flex-objects/blueprints/flex-objects/einsaetze.yaml
+++ b/plugins/flex-objects/blueprints/flex-objects/einsaetze.yaml
@@ -27,9 +27,9 @@ config:
     # Permissions
     permissions:
       # Primary permissions
-      admin.contacts:
+      admin.einsaetze:
         type: crudpl
-        label: Einsatzberichte 
+        label: Flex Einsatzberichte 
 
     # List view
     list:
