--- a/plugins/flex-objects/blueprints/flex-objects/vorstellung.yaml
+++ b/plugins/flex-objects/blueprints/flex-objects/vorstellung.yaml
@@ -17,7 +17,7 @@ config:
         title: Vorstellung
         icon: fa-user
         # Authorization to collection admin
-        authorize: ['admin.einsaetze.list', 'admin.super']
+        authorize: ['admin.vorstellung.list', 'admin.super']
         # Priority -10 .. 10 (highest goes up)
         priority: 2
 
@@ -29,7 +29,7 @@ config:
       # Primary permissions
       admin.contacts:
         type: crudpl
-        label: Eomsatue
+        label: Flex Vorstellung
 
     # List view
     list:
