Update shop functions

--- a/blueprints/flex-objects/products.yaml
+++ b/blueprints/flex-objects/products.yaml
@@ -160,9 +160,12 @@ form:
       type: checkboxes
       label: Größe
       options:
+        'XS': 'XS'
         'S': 'S'
         'M': 'M'
         'L': 'L'
         'XL': 'XL'
         'XXL': 'XXL'
         'XXXL': 'XXXL'
+        'XXXXL': 'XXXXL'
+      use: keys
