Add save cart functionality and improve performance

--- a/themes/feuerwehr-hungen/package.json
+++ b/themes/feuerwehr-hungen/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "flickity": "^3.0.0",
     "glightbox": "^3.3.0",
-    "gulp-sourcemaps": "^2.6.4"
+    "gulp-sourcemaps": "^2.6.4",
+    "swiffy-slider": "^1.6.0"
   }
 }
