--- a/config/versions.yaml
+++ b/config/versions.yaml
@@ -5,3 +5,4 @@ core:
     history:
       - { version: 1.7.46, date: '2024-05-19 04:05:12' }
       - { version: 1.7.48, date: '2024-12-22 16:50:02' }
+      - { version: 1.7.48, date: '2024-12-30 10:57:43' }
