Add flex objects for videos

--- a/config/plugins/flex-objects.yaml
+++ b/config/plugins/flex-objects.yaml
@@ -9,8 +9,9 @@ admin_list:
 directories:
   1: 'blueprints://flex-objects/einsaetze.yaml'
   2: 'blueprints://flex-objects/pages.yaml'
-  3: 'blueprints://flex-objects/technic.yaml'
-  4: 'blueprints://flex-objects/user-accounts.yaml'
-  5: 'blueprints://flex-objects/user-groups.yaml'
-  6: 'blueprints://flex-objects/vorstellung.yaml'
-  7: 'blueprints://flex-objects/products.yaml'
+  3: 'blueprints://flex-objects/products.yaml'
+  4: 'blueprints://flex-objects/technic.yaml'
+  6: 'blueprints://flex-objects/user-accounts.yaml'
+  7: 'blueprints://flex-objects/user-groups.yaml'
+  8: 'blueprints://flex-objects/videos.yaml'
+  9: 'blueprints://flex-objects/vorstellung.yaml'
