Adjust to setting per card gradient and fix centering of icons

--- a/themes/feuerwehr-hungen/blueprints/modular/nav-cards.yaml
+++ b/themes/feuerwehr-hungen/blueprints/modular/nav-cards.yaml
@@ -43,3 +43,9 @@ form:
                 .icon:
                   type: text
                   label: Icon
+                .gradient1:
+                  type: text
+                  label: Farbgradient 1
+                .gradient2:
+                  type: text
+                  label: Farbgradient 2
