Update from dev

--- a/data/flex-objects/einsatze.yaml
+++ b/data/flex-objects/einsatze.yaml
@@ -1291,3 +1291,4 @@ efed1e4935530066778e943c4e120cc5:
       size: 311230
       path: 'image://einsatz-images/photo_2025-01-19_20-20-29.jpg'
   picked_image: photo_2025-01-19_20-20-29.jpg
+  blog: /home/brandsicherung-in-lollar
